--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/platform-express": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "dotenv": "^8.0.0",
+    "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
