--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
