--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.2.4",
     "@nestjs/platform-express": "^6.0.0",
     "@types/dotenv": "^6.1.1",
+    "@types/nodemailer": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
@@ -31,6 +32,7 @@
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.2.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3"
