--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
+    "nest-schedule": "^0.6.0",
     "nodemailer": "^6.2.1",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
