--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
+    "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "nest-schedule": "^0.6.0",
     "nodemailer": "^6.2.1",
