--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.2.4",
+    "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "@types/dotenv": "^6.1.1",
+    "@types/mongodb": "^3.1.27",
     "@types/nodemailer": "^6.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
@@ -33,6 +35,7 @@
     "fs": "^0.0.1-security",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.5.11",
     "nest-schedule": "^0.6.0",
     "nodemailer": "^6.2.1",
     "reflect-metadata": "^0.1.12",
