--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.2.4",
+    "@nestjs/graphql": "^6.2.4",
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/platform-express": "^6.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/mongodb": "^3.1.27",
     "@types/nodemailer": "^6.1.0",
+    "apollo-server-express": "^2.6.2",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
@@ -34,8 +36,10 @@
     "dotenv": "^8.0.0",
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
+    "graphql": "^14.3.1",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.11",
     "mongoose": "^5.5.11",
     "nest-schedule": "^0.6.0",
     "nodemailer": "^6.2.1",
