--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "firebase-admin": "^7.4.0",
     "fs": "^0.0.1-security",
     "graphql": "^14.3.1",
+    "graphql-type-json": "^0.3.0",
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
