--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "js-yaml": "^3.13.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.11",
+    "memoizee": "^0.4.14",
     "mongoose": "^5.5.11",
     "nest-schedule": "^0.6.0",
     "nodemailer": "^6.2.1",
