--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,9 @@
     "noLib": false,
     "noImplicitAny": false,
   },
+  "include": [
+    "src/**/*"
+  ],
   "exclude": [
     "node_modules",
     "**/*.spec.ts"
